--- a/index.html
+++ b/index.html
@@ -25,180 +25,195 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <nav>
+    <header class="header">
+      <div class="container header-container">
         <a class="logo" href="./index.html"
           ><span class="logo-accent">Web</span>Studio</a
         >
-        <ul>
-          <li><a class="header-link-accent" href="./index.html">Студія</a></li>
-          <li>
-            <a class="header-link" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li><a class="header-link" href="#">Контакти</a></li>
-        </ul>
-      </nav>
+        <nav class="navigation">
+          <ul class="header-link-list list">
+            <li>
+              <a class="header-link-accent" href="./index.html">Студія</a>
+            </li>
+            <li>
+              <a class="header-link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li><a class="header-link" href="#">Контакти</a></li>
+          </ul>
+        </nav>
 
-      <ul>
-        <li>
-          <a class="header-link-acnt" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="header-link-acnt" href="tel:+380961111111"
-            >+38 (096) 111-11-11</a
-          >
-        </li>
-      </ul>
+        <ul class="header-list-contact">
+          <li>
+            <a class="header-link-mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="header-link-phone" href="tel:+380961111111"
+              >+38 (096) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
     <!-- Main content -->
 
     <main>
       <!-- Hero section -->
       <section class="hero-section">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-button" type="button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-button" type="button">Замовити послугу</button>
+        </div>
       </section>
       <!--Our activity  -->
       <section class="our-activity-section">
-        <ul class="our-activity-list">
-          <li>
-            <h3 class="detail-list-item">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="detail-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="punctuality-list-item">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="punctuality-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="diligence-list-item">ПЛАНУВАННЯ</h3>
-            <p class="diligence-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="technologie-list-item">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="technologies-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="our-activity-list">
+            <li>
+              <h3 class="detail-list-item">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="detail-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="punctuality-list-item">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="punctuality-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="diligence-list-item">ПЛАНУВАННЯ</h3>
+              <p class="diligence-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="technologie-list-item">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="technologies-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
+      <!-- Activity-images -->
       <section class="activity-images">
-        <h2 class="our-activity-title">Чим ми займаємося</h2>
-        <ul class="activity-images">
-          <li>
-            <img
-              src="./images/activity/img1.jpg"
-              alt="img1"
-              width="370"
-              ;
-              height="294"
-              ;
-            />
-          </li>
-          <li>
-            <img
-              src="./images/activity/img2.jpg"
-              alt="img2"
-              width="370"
-              ;
-              height="294"
-              ;
-            />
-          </li>
-          <li>
-            <img
-              src="./images/activity/img3.jpg"
-              alt="img3"
-              width="370"
-              ;
-              height="294"
-              ;
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="our-activity-title">Чим ми займаємося</h2>
+          <ul class="activity-images">
+            <li class="img-box-activity">
+              <img
+                src="./images/activity/img1.jpg"
+                alt="img1"
+                width="370"
+                ;
+                height="294"
+                ;
+              />
+            </li>
+            <li class="img-box-activity">
+              <img
+                src="./images/activity/img2.jpg"
+                alt="img2"
+                width="370"
+                ;
+                height="294"
+                ;
+              />
+            </li>
+            <li class="img-box-activity">
+              <img
+                src="./images/activity/img3.jpg"
+                alt="img3"
+                width="370"
+                ;
+                height="294"
+                ;
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Our Team  -->
       <section class="our-team-section">
-        <h2 class="our-team-title">Наша команда</h2>
-        <ul class="our-team-list">
-          <li>
-            <img
-              src="./images/team/ІгорДем'яненко.jpg"
-              alt="Ігор Дем'яненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="product-designer-name">Ігор Дем'яненко</h3>
-            <p class="product-designer-profession">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/ОльгаРєпіна.jpg"
-              alt="Ольга Рєпіна"
-              width="270"
-              height="260"
-            />
-            <h3 class="frontend-developer-name">Ольга Рєпіна</h3>
-            <p class="frontend-developer-profession">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/МиколаТарасов.jpg"
-              alt="Микола Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3 class="marketing-name">Микола Тарасов</h3>
-            <p class="marketing-profession">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/МихайлоЄрмаков.jpg"
-              alt="Михайло Єрмаков"
-              width="270"
-              height="260"
-            />
-            <h3 class="ul-designer-name">Михайло Єрмаков</h3>
-            <p class="ul-designer-profession">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="our-team-title">Наша команда</h2>
+          <ul class="our-team-list">
+            <li>
+              <img
+                src="./images/team/ІгорДем'яненко.jpg"
+                alt="Ігор Дем'яненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="product-designer-name">Ігор Дем'яненко</h3>
+              <p class="product-designer-profession">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/team/ОльгаРєпіна.jpg"
+                alt="Ольга Рєпіна"
+                width="270"
+                height="260"
+              />
+              <h3 class="frontend-developer-name">Ольга Рєпіна</h3>
+              <p class="frontend-developer-profession">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/team/МиколаТарасов.jpg"
+                alt="Микола Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="marketing-name">Микола Тарасов</h3>
+              <p class="marketing-profession">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/team/МихайлоЄрмаков.jpg"
+                alt="Михайло Єрмаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="ul-designer-name">Михайло Єрмаков</h3>
+              <p class="ul-designer-profession">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
 
     <footer class="footer-saction">
-      <a class="logo-footer" href="./index.html"
-        ><span class="logo-footer-accent">Web</span>Studio</a
-      >
+      <div class="container">
+        <a class="logo-footer" href="./index.html"
+          ><span class="logo-footer-accent">Web</span>Studio</a
+        >
 
-      <address>
-        <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
-        <ul>
-          <li>
-            <a class="footer-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-link" href="tel:+380961111111"
-              >+38 (096) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address>
+          <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
+          <ul>
+            <li>
+              <a class="footer-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-link" href="tel:+380961111111"
+                >+38 (096) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
