update css file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <li>
               <a class="header-link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li><a class="header-link-last" href="#">Контакти</a></li>
+            <li>
+              <a class="header-link-last" href="#">Контакти</a>
+            </li>
           </ul>
         </nav>
 
