updte html and css files

--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
       <!-- Hero section -->
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="hero-title">
+            Ефективні рішення для <br />
+            вашого бізнесу
+          </h1>
           <button class="hero-button" type="button">Замовити послугу</button>
         </div>
       </section>
       <!--Our activity  -->
-      <section class="our-activity-section">
+      <section class="our-activity-section section">
         <div class="container">
           <ul class="our-activity-list">
             <li>
@@ -104,7 +107,7 @@
       </section>
 
       <!-- Activity-images -->
-      <section class="activity-images">
+      <section class="activity-images section">
         <div class="container">
           <h2 class="our-activity-title">Чим ми займаємося</h2>
           <ul class="activity-images">
@@ -143,11 +146,11 @@
       </section>
 
       <!--Our Team  -->
-      <section class="our-team-section">
+      <section class="our-team-section section">
         <div class="container">
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-list">
-            <li>
+            <li class="team-members">
               <img
                 src="./images/team/ІгорДем'яненко.jpg"
                 alt="Ігор Дем'яненко"
@@ -157,7 +160,7 @@
               <h3 class="product-designer-name">Ігор Дем'яненко</h3>
               <p class="product-designer-profession">Product Designer</p>
             </li>
-            <li>
+            <li class="team-members">
               <img
                 src="./images/team/ОльгаРєпіна.jpg"
                 alt="Ольга Рєпіна"
@@ -167,7 +170,7 @@
               <h3 class="frontend-developer-name">Ольга Рєпіна</h3>
               <p class="frontend-developer-profession">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-members">
               <img
                 src="./images/team/МиколаТарасов.jpg"
                 alt="Микола Тарасов"
@@ -177,7 +180,7 @@
               <h3 class="marketing-name">Микола Тарасов</h3>
               <p class="marketing-profession">Marketing</p>
             </li>
-            <li>
+            <li class="team-members">
               <img
                 src="./images/team/МихайлоЄрмаков.jpg"
                 alt="Михайло Єрмаков"
@@ -194,8 +197,8 @@
 
     <!-- Footer -->
 
-    <footer class="footer-saction">
-      <div class="container">
+    <footer class="footer-section">
+      <div class="container footer-conteiner">
         <a class="logo-footer" href="./index.html"
           ><span class="logo-footer-accent">Web</span>Studio</a
         >
