--- a/portfolio.html
+++ b/portfolio.html
@@ -18,12 +18,15 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo" href="./index.html"
+    <header class="header">
+  <div class="container header-container">
+       <a class="logo" href="./index.html"
           ><span class="logo-accent">Web</span>Studio</a
         >
-        <ul class="portfolio-links-list">
+
+      <nav class="navigation">
+     
+        <ul class="portfolio-links-list list">
           <li><a class="header-link" href="./index.html">Студія</a></li>
           <li>
             <a class="header-link-portfolio" href="./portfolio.html"
@@ -34,22 +37,24 @@
         </ul>
       </nav>
 
-      <ul>
+      <ul class="header-list-contact">
         <li>
-          <a class="header-link-acnt" href="mailto:info@devstudio.com"
+          <a class="header-link-mail" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="header-link-acnt" href="tel:+380961111111"
+          <a class="header-link-phone" href="tel:+380961111111"
             >+38 (096) 111-11-11</a
           >
         </li>
       </ul>
+      </div>
     </header>
     <!-- Main content -->
     <main>
       <section class="portfolio-section">
+          <div class="container">
         <!-- List filters -->
         <ul class="filters-list">
           <li>
@@ -164,11 +169,13 @@
           </a>
           </li>
         </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
-    <footer class="footer-saction">
+    <footer class="footer-section">
+        <div class="container footer-conteiner">
       <a class="logo-footer" href="./index.html"
         ><span class="logo-footer-accent">Web</span>Studio</a
       >
@@ -188,6 +195,7 @@
           </li>
         </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
