update css and html files

--- a/index.html
+++ b/index.html
@@ -152,43 +152,51 @@
           <ul class="our-team-list">
             <li class="team-members">
               <img
+                class="team-img"
                 src="./images/team/ІгорДем'яненко.jpg"
                 alt="Ігор Дем'яненко"
                 width="270"
                 height="260"
               />
-              <h3 class="product-designer-name">Ігор Дем'яненко</h3>
-              <p class="product-designer-profession">Product Designer</p>
+              <h3 class="product-designer-name team-name">Ігор Дем'яненко</h3>
+              <p class="product-designer-profession team-proffesion">
+                Product Designer
+              </p>
             </li>
             <li class="team-members">
               <img
+                class="team-img"
                 src="./images/team/ОльгаРєпіна.jpg"
                 alt="Ольга Рєпіна"
                 width="270"
                 height="260"
               />
-              <h3 class="frontend-developer-name">Ольга Рєпіна</h3>
-              <p class="frontend-developer-profession">Frontend Developer</p>
+              <h3 class="frontend-developer-name team-name">Ольга Рєпіна</h3>
+              <p class="frontend-developer-profession team-proffesion">
+                Frontend Developer
+              </p>
             </li>
             <li class="team-members">
               <img
+                class="team-img"
                 src="./images/team/МиколаТарасов.jpg"
                 alt="Микола Тарасов"
                 width="270"
                 height="260"
               />
-              <h3 class="marketing-name">Микола Тарасов</h3>
-              <p class="marketing-profession">Marketing</p>
+              <h3 class="marketing-name team-name">Микола Тарасов</h3>
+              <p class="marketing-profession team-proffesion">Marketing</p>
             </li>
             <li class="team-members">
               <img
+                class="team-img"
                 src="./images/team/МихайлоЄрмаков.jpg"
                 alt="Михайло Єрмаков"
                 width="270"
                 height="260"
               />
-              <h3 class="ul-designer-name">Михайло Єрмаков</h3>
-              <p class="ul-designer-profession">UI Designer</p>
+              <h3 class="ul-designer-name team-name">Михайло Єрмаков</h3>
+              <p class="ul-designer-profession team-proffesion">UI Designer</p>
             </li>
           </ul>
         </div>
@@ -198,14 +206,14 @@
     <!-- Footer -->
 
     <footer class="footer-section">
-      <div class="container footer-conteiner">
+      <div class="container footer-container">
         <a class="logo-footer" href="./index.html"
           ><span class="logo-footer-accent">Web</span>Studio</a
         >
 
         <address>
           <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul>
+          <ul class="footer-contacts">
             <li>
               <a class="footer-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
