update css & html files

--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
       <section class="our-activity-section section">
         <div class="container">
           <ul class="our-activity-list">
-            <li>
+            <li class="our-activity-items">
               <h3 class="detail-list-item">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="detail-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="our-activity-items">
               <h3 class="punctuality-list-item">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="punctuality-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="our-activity-items">
               <h3 class="diligence-list-item">ПЛАНУВАННЯ</h3>
               <p class="diligence-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="our-activity-items">
               <h3 class="technologie-list-item">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="technologies-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -107,7 +107,7 @@
       </section>
 
       <!-- Activity-images -->
-      <section class="activity-images section">
+      <section class="our-activity-images section">
         <div class="container">
           <h2 class="our-activity-title">Чим ми займаємося</h2>
           <ul class="activity-images">
