--- a/index.html
+++ b/index.html
@@ -64,10 +64,7 @@
       <!-- Hero section -->
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-title">
-            Ефективні рішення для <br />
-            вашого бізнесу
-          </h1>
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
         </div>
       </section>
