--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main>
       <!-- Hero section -->
       <section class="hero-section">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
         </div>
