--- a/portfolio.html
+++ b/portfolio.html
@@ -19,21 +19,21 @@
   </head>
   <body>
     <header class="header">
-  <div class="container header-container">
-       <a class="logo" href="./index.html"
+<div class="container portfolio-header-container">
+       <a class="portfolio-logo" href="./index.html"
           ><span class="logo-accent">Web</span>Studio</a
         >
 
       <nav class="navigation">
      
         <ul class="portfolio-links-list list">
-          <li><a class="header-link" href="./index.html">Студія</a></li>
+          <li><a class="portfolio-header-link" href="./index.html">Студія</a></li>
           <li>
-            <a class="header-link-portfolio" href="./portfolio.html"
+            <a class="portfolioheader-link-portfolio" href="./portfolio.html"
               >Портфоліо</a
             >
           </li>
-          <li><a class="header-link" href="#">Контакти</a></li>
+          <li><a class="portfolio-header-link" href="#">Контакти</a></li>
         </ul>
       </nav>
 
@@ -49,12 +49,12 @@
           >
         </li>
       </ul>
-      </div>
+</div>
     </header>
     <!-- Main content -->
     <main>
       <section class="portfolio-section">
-          <div class="container">
+  <div class="container main-container">
         <!-- List filters -->
         <ul class="filters-list">
           <li>
