Update css & portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header">
-<div class="container portfolio-header-container">
+<div class="container header-container">
        <a class="portfolio-logo" href="./index.html"
           ><span class="logo-accent">Web</span>Studio</a
         >
@@ -29,7 +29,7 @@
         <ul class="portfolio-links-list list">
           <li><a class="portfolio-header-link" href="./index.html">Студія</a></li>
           <li>
-            <a class="portfolioheader-link-portfolio" href="./portfolio.html"
+            <a class="portfolio-header-link-acnt" href="./portfolio.html"
               >Портфоліо</a
             >
           </li>
@@ -76,9 +76,10 @@
         </ul>
 <!-- List items -->
         <ul class="portfolio-items-list">
-          <li>
+          <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
-            <img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" />
+            <img  class="portfoli-image"
+             src="./images/portfolio/Технокряк.jpg" alt="Технокряк" />
 
             <h3 class="portfolio-product-name">Технокряк</h3>
             <p class="portfolio-product">Веб-сайт</p>
@@ -86,9 +87,9 @@
           </a>
         </li>
 
-        <li>
+        <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
-            <img
+            <img class="portfoli-image"
               src="./images/portfolio/ПостерGoldenOrleanvsGoldenStar.jpg"
               alt="Постер New Orlean vs Golden Star"
             />
@@ -99,9 +100,9 @@
           </a>
         </li>
 
-          <li>
+          <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
-            <img
+            <img class="portfoli-image"
               src="./images/portfolio/РесторанSeafood.jpg"
               alt="Ресторан Seafood"
             />
@@ -110,27 +111,29 @@
             <p class="portfolio-product">Додаток</p>
           </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
-            <img src="./images/portfolio/ПроектPrime.jpg" alt="Проєкт Prime" />
+            <img class="portfoli-image"
+            src="./images/portfolio/ПроектPrime.jpg" alt="Проєкт Prime" />
 
             <h3 class="portfolio-product-name">Проєкт Prime</h3>
             <p class="portfolio-product">Маркетинг</p>
           </a>
           </li>
           
-          <li>
+          <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
-            <img src="./images/portfolio/ПроєктBoxes.jpg" alt="Проєкт Boxes" />
+            <img class="portfoli-image"
+            src="./images/portfolio/ПроєктBoxes.jpg" alt="Проєкт Boxes" />
 
             <h3 class="portfolio-product-name">Проєкт Boxes</h3>
             <p class="portfolio-product">Додаток</p>
           </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
-            <img
+            <img class="portfoli-image"
               src="./images/portfolio/InspirationhasnoBorders.jpg"
               alt="Inspiration has no Borders"
             />
@@ -138,9 +141,9 @@
             <p class="portfolio-product">Веб-сайт</p>
           </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
-            <img
+            <img class="portfoli-image"
               src="./images/portfolio/ВиданняLimitedEdition.jpg"
               alt="Видання Limited Edition"
             />
@@ -149,18 +152,19 @@
           </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a  class="portfoli-item-link" href="#">
-            <img src="./images/portfolio/ПроєктLAB.jpg" alt="Проєкт LAB" />
+            <img class="portfoli-image" 
+            src="./images/portfolio/ПроєктLAB.jpg" alt="Проєкт LAB" />
 
             <h3 class="portfolio-product-name">Проєкт LAB</h3>
             <p class="portfolio-product">Маркетинг</p>
           </a>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a  class="portfoli-item-link"  href="#">
-            <img
+            <img class="portfoli-image"
               src="./images/portfolio/GrowingBusiness.jpg"
               alt="Growing Business"
             />
