update portfolio css and html files

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,13 +27,15 @@
       <nav class="navigation">
      
         <ul class="portfolio-links-list list">
-          <li><a class="portfolio-header-link" href="./index.html">Студія</a></li>
           <li>
-            <a class="portfolio-header-link-acnt" href="./portfolio.html"
+            <a class="portfolio-header-link" href="./index.html">Студія</a></li>
+          <li>
+            <a class="portfolio-header-link" href="./portfolio.html"
               >Портфоліо</a
             >
           </li>
-          <li><a class="portfolio-header-link" href="#">Контакти</a></li>
+          <li>
+            <a class="portfolio-header-link" href="#">Контакти</a></li>
         </ul>
       </nav>
 
