--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <nav class="navigation">
           <ul class="header-link-list list">
             <li>
-              <a class="header-link-accent" href="./index.html">Студія</a>
+              <a class="header-link" href="./index.html">Студія</a>
             </li>
             <li>
               <a class="header-link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li>
-              <a class="header-link-last" href="#">Контакти</a>
+              <a class="header-link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
