Update html and css files

--- a/index.html
+++ b/index.html
@@ -31,26 +31,28 @@
           ><span class="logo-accent">Web</span>Studio</a
         >
         <nav class="navigation">
+          <div class="nav">
           <ul class="header-link-list list">
-            <li>
-              <a class="header-link" href="./index.html">Студія</a>
+            <li class="nav-link">
+              <a class="header-link-accent" href="./index.html">Студія</a>
             </li>
-            <li>
+            <li class="nav-link">
               <a class="header-link" href="./portfolio.html">Портфоліо</a>
-            </li>
+            </li class="nav-link">
             <li>
               <a class="header-link" href="#">Контакти</a>
-            </li>
+         </li>
           </ul>
+          </div>
         </nav>
-
+<div class="header-group">
         <ul class="header-list-contact">
-          <li>
+          <li class="group-link">
             <a class="header-link-mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="group-link">
             <a class="header-link-phone" href="tel:+380961111111"
               >+38 (096) 111-11-11</a
             >
@@ -155,10 +157,12 @@
                 width="270"
                 height="260"
               />
+              <div class="team-members-info">
               <h3 class="product-designer-name team-name">Ігор Дем'яненко</h3>
               <p class="product-designer-profession team-proffesion">
                 Product Designer
               </p>
+              </div>
             </li>
             <li class="team-members">
               <img
@@ -168,10 +172,12 @@
                 width="270"
                 height="260"
               />
+               <div class="team-members-info">
               <h3 class="frontend-developer-name team-name">Ольга Рєпіна</h3>
               <p class="frontend-developer-profession team-proffesion">
                 Frontend Developer
               </p>
+              </div>
             </li>
             <li class="team-members">
               <img
@@ -181,8 +187,10 @@
                 width="270"
                 height="260"
               />
+               <div class="team-members-info">
               <h3 class="marketing-name team-name">Микола Тарасов</h3>
               <p class="marketing-profession team-proffesion">Marketing</p>
+              </div>
             </li>
             <li class="team-members">
               <img
@@ -192,8 +200,10 @@
                 width="270"
                 height="260"
               />
+               <div class="team-members-info">
               <h3 class="ul-designer-name team-name">Михайло Єрмаков</h3>
               <p class="ul-designer-profession team-proffesion">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
