--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
           <li>
             <a class="portfolio-header-link" href="./index.html">Студія</a></li>
           <li>
-            <a class="portfolio-header-link" href="./portfolio.html"
+            <a class="portfolio-header-link-accent" href="./portfolio.html"
               >Портфоліо</a
             >
           </li>
