update css and html files

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <body>
     <!-- Header -->
     <header class="header">
+      <section class="header-section section"> 
       <div class="container header-container">
         <a class="logo" href="./index.html"
           ><span class="logo-accent">Web</span>Studio</a
@@ -59,12 +60,13 @@
           </li>
         </ul>
       </div>
+      </section>  
     </header>
     <!-- Main content -->
 
     <main>
       <!-- Hero section -->
-      <section class="hero-section">
+      <section class="hero-section section">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
