Update css and html files

--- a/index.html
+++ b/index.html
@@ -26,27 +26,24 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <section class="header-section section"> 
       <div class="container header-container">
         <a class="logo" href="./index.html"
           ><span class="logo-accent">Web</span>Studio</a
         >
         <nav class="navigation">
-          <div class="nav">
           <ul class="header-link-list list">
             <li class="nav-link">
               <a class="header-link-accent" href="./index.html">Студія</a>
             </li>
             <li class="nav-link">
               <a class="header-link" href="./portfolio.html">Портфоліо</a>
-            </li class="nav-link">
-            <li>
+            </li>
+            <li class="nav-link">
               <a class="header-link" href="#">Контакти</a>
-         </li>
+            </li>
           </ul>
-          </div>
         </nav>
-<div class="header-group">
+
         <ul class="header-list-contact">
           <li class="group-link">
             <a class="header-link-mail" href="mailto:info@devstudio.com"
@@ -60,13 +57,12 @@
           </li>
         </ul>
       </div>
-      </section>  
     </header>
     <!-- Main content -->
 
     <main>
       <!-- Hero section -->
-      <section class="hero-section section">
+      <section class="hero-section">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
@@ -160,10 +156,10 @@
                 height="260"
               />
               <div class="team-members-info">
-              <h3 class="product-designer-name team-name">Ігор Дем'яненко</h3>
-              <p class="product-designer-profession team-proffesion">
-                Product Designer
-              </p>
+                <h3 class="product-designer-name team-name">Ігор Дем'яненко</h3>
+                <p class="product-designer-profession team-proffesion">
+                  Product Designer
+                </p>
               </div>
             </li>
             <li class="team-members">
@@ -174,11 +170,11 @@
                 width="270"
                 height="260"
               />
-               <div class="team-members-info">
-              <h3 class="frontend-developer-name team-name">Ольга Рєпіна</h3>
-              <p class="frontend-developer-profession team-proffesion">
-                Frontend Developer
-              </p>
+              <div class="team-members-info">
+                <h3 class="frontend-developer-name team-name">Ольга Рєпіна</h3>
+                <p class="frontend-developer-profession team-proffesion">
+                  Frontend Developer
+                </p>
               </div>
             </li>
             <li class="team-members">
@@ -189,9 +185,9 @@
                 width="270"
                 height="260"
               />
-               <div class="team-members-info">
-              <h3 class="marketing-name team-name">Микола Тарасов</h3>
-              <p class="marketing-profession team-proffesion">Marketing</p>
+              <div class="team-members-info">
+                <h3 class="marketing-name team-name">Микола Тарасов</h3>
+                <p class="marketing-profession team-proffesion">Marketing</p>
               </div>
             </li>
             <li class="team-members">
@@ -202,9 +198,11 @@
                 width="270"
                 height="260"
               />
-               <div class="team-members-info">
-              <h3 class="ul-designer-name team-name">Михайло Єрмаков</h3>
-              <p class="ul-designer-profession team-proffesion">UI Designer</p>
+              <div class="team-members-info">
+                <h3 class="ul-designer-name team-name">Михайло Єрмаков</h3>
+                <p class="ul-designer-profession team-proffesion">
+                  UI Designer
+                </p>
               </div>
             </li>
           </ul>
