--- a/portfolio.html
+++ b/portfolio.html
@@ -27,25 +27,25 @@
       <nav class="navigation">
      
         <ul class="portfolio-links-list list">
-          <li>
+          <li class="portfolio-nav-link">
             <a class="portfolio-header-link" href="./index.html">Студія</a></li>
-          <li>
+          <li class="portfolio-nav-link">
             <a class="portfolio-header-link-accent" href="./portfolio.html"
               >Портфоліо</a
             >
           </li>
-          <li>
+          <li class="portfolio-nav-link">
             <a class="portfolio-header-link" href="#">Контакти</a></li>
         </ul>
       </nav>
 
       <ul class="header-list-contact">
-        <li>
+        <li  class="group-link">
           <a class="header-link-mail" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="group-link">
           <a class="header-link-phone" href="tel:+380961111111"
             >+38 (096) 111-11-11</a
           >
