Update css and html files

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,20 +59,20 @@
   <div class="container main-container">
         <!-- List filters -->
         <ul class="filters-list">
-          <li>
+          <li class="filter-items">
             <button class="filters-items-button-accent" type="button" href="#"></a
             >Усі
           </li>
-          <li>
+          <li class="filter-items">
             <button class="filters-items-button" type="button" href="#"></a>Веб-сайти
           </li>
-          <li>
+          <li class="filter-items">
             <button class="filters-items-button" type="button" href="#"></a>Додатки
           </li>
-          <li>
+          <li class="filter-items">
             <button class="filters-items-button" type="button" href="#"></a>Дизайн
           </li>
-          <li>
+          <li class="filter-items">
             <button class="filters-items-button" type="button" href="#"></a>Маркетинг
           </li>
         </ul>
