--- a/index.html
+++ b/index.html
@@ -213,26 +213,26 @@
     <!-- Footer -->
 
     <footer class="footer-section">
-      <div class="container footer-container">
-        <a class="logo-footer" href="./index.html"
-          ><span class="logo-footer-accent">Web</span>Studio</a
-        >
+      <div class="container">
+      <a class="logo-footer" href="./index.html"
+        ><span class="logo-footer-accent">Web</span>Studio</a
+      >
 
-        <address>
-          <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="footer-contacts">
-            <li>
-              <a class="footer-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="footer-link" href="tel:+380961111111"
-                >+38 (096) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+      <address>
+        <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="footer-contacts">
+          <li class="footer-item">
+            <a class="footer-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li class="footer-item">
+          <li class="footer-item">
+            <a class="footer-link" href="tel:+380961111111"
+              >+38 (096) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
       </div>
     </footer>
   </body>
