--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
     <!-- Main content -->
     <main>
       <section class="portfolio-section">
-  <div class="container main-container">
+  <div class="container">
         <!-- List filters -->
         <ul class="filters-list">
           <li class="filter-items">
@@ -83,15 +83,16 @@
           </li>
         </ul>
 <!-- List items -->
+
         <ul class="portfolio-items-list">
           <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
             <img  class="portfoli-image"
              src="./images/portfolio/Технокряк.jpg" alt="Технокряк" />
-
+             <div class="portfolio-item-titel">
             <h3 class="portfolio-product-name">Технокряк</h3>
             <p class="portfolio-product">Веб-сайт</p>
-
+             </div>
           </a>
         </li>
 
@@ -101,11 +102,11 @@
               src="./images/portfolio/ПостерGoldenOrleanvsGoldenStar.jpg"
               alt="Постер New Orlean vs Golden Star"
             />
-
-            <h3 class="portfolio-product-name">Постер New Orlean vs Golden Star</h3>
-            <p class="portfolio-product">Дизайн</p>
-
-          </a>
+          <div class="portfolio-item-titel">
+          <h3 class="portfolio-product-name">Постер New Orlean vs Golden Star</h3>
+           <p class="portfolio-product">Дизайн</p>
+           </div>
+        </a>
         </li>
 
           <li class="portfolio-item">
@@ -114,28 +115,31 @@
               src="./images/portfolio/РесторанSeafood.jpg"
               alt="Ресторан Seafood"
             />
-
-            <h3 class="portfolio-product-name">Ресторан Seafood</h3>
+              <div class="portfolio-item-titel">
+             <h3 class="portfolio-product-name">Ресторан Seafood</h3>
             <p class="portfolio-product">Додаток</p>
+         </div>
           </a>
           </li>
           <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
             <img class="portfoli-image"
             src="./images/portfolio/ПроектPrime.jpg" alt="Проєкт Prime" />
-
-            <h3 class="portfolio-product-name">Проєкт Prime</h3>
+  
+              <h3 class="portfolio-product-name">Проєкт Prime</h3>
             <p class="portfolio-product">Маркетинг</p>
-          </a>
+           </div>
+           </a>
           </li>
           
           <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
             <img class="portfoli-image"
             src="./images/portfolio/ПроєктBoxes.jpg" alt="Проєкт Boxes" />
-
+            <div class="portfolio-item-titel">
             <h3 class="portfolio-product-name">Проєкт Boxes</h3>
             <p class="portfolio-product">Додаток</p>
+            </div>
           </a>
           </li>
 
@@ -145,8 +149,10 @@
               src="./images/portfolio/InspirationhasnoBorders.jpg"
               alt="Inspiration has no Borders"
             />
+             <div class="portfolio-item-titel">
             <h3 class="portfolio-product-name">Inspiration has no Borders</h3>
             <p class="portfolio-product">Веб-сайт</p>
+            </div>
           </a>
           </li>
           <li class="portfolio-item">
@@ -155,8 +161,10 @@
               src="./images/portfolio/ВиданняLimitedEdition.jpg"
               alt="Видання Limited Edition"
             />
+             <div class="portfolio-item-titel">
             <h3 class="portfolio-product-name">Видання Limited Edition</h3>
             <p class="portfolio-product">Дизайн</p>
+            </div>
           </a>
           </li>
 
@@ -164,9 +172,10 @@
             <a  class="portfoli-item-link" href="#">
             <img class="portfoli-image" 
             src="./images/portfolio/ПроєктLAB.jpg" alt="Проєкт LAB" />
-
+            <div class="portfolio-item-titel">
             <h3 class="portfolio-product-name">Проєкт LAB</h3>
             <p class="portfolio-product">Маркетинг</p>
+            </div>
           </a>
           </li>
 
@@ -176,12 +185,14 @@
               src="./images/portfolio/GrowingBusiness.jpg"
               alt="Growing Business"
             />
+             <div class="portfolio-item-titel">
             <h3 class="portfolio-product-name">Growing Business</h3>
             <p class="portfolio-product">Додаток</p>
-          </a>
+             </div>
+            </a>
           </li>
-        </ul>
-        </div>
+            </ul>
+          </div>
       </section>
     </main>
 
