Update portfolio html and css files

--- a/portfolio.html
+++ b/portfolio.html
@@ -122,11 +122,12 @@
          </div>
           </a>
           </li>
+
           <li class="portfolio-item">
             <a class="portfoli-item-link" href="#">
             <img class="portfoli-image"
             src="./images/portfolio/ПроектPrime.jpg" alt="Проєкт Prime" />
-  
+    <div class="portfolio-item-titel">
               <h3 class="portfolio-product-name">Проєкт Prime</h3>
             <p class="portfolio-product">Маркетинг</p>
            </div>
