--- a/portfolio.html
+++ b/portfolio.html
@@ -212,12 +212,12 @@
       <address>
         <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
         <ul>
-          <li>
+          <li class="footer-item">
             <a class="footer-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="footer-item">
             <a class="footer-link" href="tel:+380961111111"
               >+38 (096) 111-11-11</a
             >
