update portfolio html and css files

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
             <a class="portfoli-item-link" href="#">
             <img  class="portfoli-image"
              src="./images/portfolio/Технокряк.jpg" alt="Технокряк" />
-             <div class="portfolio-item-titel">
+             <div class="portfolio-item-title">
             <h3 class="portfolio-product-name">Технокряк</h3>
             <p class="portfolio-product">Веб-сайт</p>
              </div>
